update redis library
